# example-contracts

./: .gitignore  .gitmodules  LICENSE  package.json  readme.md  slither.config.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  integration.yml
.github/workflows/: analytics.yaml  integration.yaml  integration.yml  localnet.yaml  publish-npm.yml  slither.yaml  test.yaml
examples/call/: .gitignore  README.md  foundry.toml  hardhat.config.ts  package.json  remappings.txt
examples/call/solana/programs/connected/: Cargo.toml
examples/call/solana/programs/connected/src/: lib.rs
examples/calls/: README.md  package.json
examples/checkin/: hardhat.config.ts
examples/dispatcher/: hardhat.config.ts
examples/hello/: .gitignore  README.md  foundry.toml  hardhat.config.ts  package.json  remappings.txt
examples/messaging/: hardhat.config.ts  package.json
examples/nft/: .gitignore  README.md  foundry.toml  hardhat.config.ts  package.json  tsconfig.json
examples/router/: hardhat.config.ts  localnet.json  package.json
examples/swap/: .gitignore  README.md  foundry.toml  hardhat.config.ts  package.json
examples/token/: .gitignore  README.md  foundry.toml  hardhat.config.ts  (+2 more)
hello/: hardhat.config.ts  package.json
message/: hardhat.config.ts  package.json
scripts/: build.sh  common.sh  integration.sh  messaging_counter.sh  messaging_message.sh  messaging_value.sh  messaging_warriors.sh  omnichain_mutlioutput.sh  omnichain_staking.sh  omnichain_swap.sh
swap/: hardhat.config.ts  package.json
withdraw/: hardhat.config.ts  package.json
(+520 files in other folders)
